# baku-ways-app

./: .env  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
app/: main.py
app/core/: container.py  database.py
app/enums/: transport_type.py
app/exceptions/: infrastructure.py
app/models/: __init__.py  base.py  scooter.py
app/repositories/: base_repository.py  scooter_repository.py
app/routers/: fast.py  scooter.py  taxi_optima.py  transit.py
app/schemas/: coordinate.py  fast.py  scooter.py  taxi_optima.py  transit.py
app/services/: scooter_service.py  taxi_optima.py
configs/: settings.py
migrations/: env.py
migrations/versions/: e781f584b354_init.py
tests/: test.py
