[tool.poetry]
name = "app"
version = "0.0.1"
description = ""
authors = ["pxmpkeen <pxmpkeen@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
sqlmodel = "^0.0.22"
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
uvicorn = "^0.32.0"
pydantic = "^2.9.2"
wireup = "^0.12.0"
alembic = "^1.13.3"
pydantic-settings = "^2.6.1"
googlemaps = "^4.10.0"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
